--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ img {
     padding: 30px 0;
 }
 
-.section-first {
+.section-blue {
     background-color: navy;
 }
 
@@ -84,19 +84,23 @@ img {
     background-color: pink;
 }
 
-.row-cols-2-first .col-60 {
+.row-cols-2 .col-60 {
     flex-basis: 60%;
 }
 
-.row-cols-2-first .col-40 {
+.row-cols-2 .col-40 {
     flex-basis: 40%;
 }
 
-.debug .section-second {
+.debug .section-white {
     background-color: white;
 }
 
-.row-cols-2-first {
+.debug .section-grey {
+    background-color: lightgrey;
+}
+
+.row-cols-2 {
     min-height: 500px;
 }
 
